--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="/javascripts/main.js"></script>
+    <script src="javascripts/main.js"></script>
     <title>business-objects by marmarosi</title>
   </head>
 
